// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skritterActionCreator fetchContext success fetches the skritter context from the server 1`] = `
Array [
  "http://example.com/skritter/context",
  Object {
    "cache": "no-cache",
    "credentials": "omit",
    "headers": Object {
      "Authorization": "Code secretcode",
    },
    "mode": "cors",
    "redirect": "follow",
  },
]
`;

exports[`skritterActionCreator submitToSkritter success submits the vocab list 1`] = `
Object {
  "cache": "no-cache",
  "credentials": "omit",
  "headers": Object {
    "content-type": "application/json",
    "x-session": "mock-session",
  },
  "method": "POST",
  "mode": "cors",
  "redirect": "follow",
}
`;
